trunk/test/T2/Fail/T2_noTypeArgument.ic
class Test{
	int foobar(int n, m){
		return 1;
	}
}